// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fetch historical balances 2`] = `
[
  {
    "BTC": 0.035979259,
    "_id": "1504224000000",
    "_rev": "1-06b16240c0df539c5d87bc5762c63c94",
    "timestamp": 1504224000000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504310400000",
    "_rev": "1-58b68dd65baccc4c6898b783f9d1b6b2",
    "timestamp": 1504310400000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504396800000",
    "_rev": "1-351c52c4e7d6110750e6449bc7746d46",
    "timestamp": 1504396800000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504483200000",
    "_rev": "1-365bb1289ae0c44606acdd4ae9a40704",
    "timestamp": 1504483200000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504569600000",
    "_rev": "1-c6c4de1249581088abac2d68f1015afa",
    "timestamp": 1504569600000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504656000000",
    "_rev": "1-94131fd11ca1bff877b223f7b5f1ea15",
    "timestamp": 1504656000000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504742400000",
    "_rev": "2-dcad4c4b7364c7b84b2429884373815c",
    "timestamp": 1504742400000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504828800000",
    "_rev": "2-c556a7a4336bf1490dfbb77ec79f4a81",
    "timestamp": 1504828800000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504915200000",
    "_rev": "2-b0bacd15cfb691da731d94cb5417dbba",
    "timestamp": 1504915200000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505001600000",
    "_rev": "2-983c718bbd7a35de6bb23691eaa48b04",
    "timestamp": 1505001600000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505088000000",
    "_rev": "2-f4d0a4650341174f11a859e501a40684",
    "timestamp": 1505088000000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505174400000",
    "_rev": "2-17ccf76a032dd994d946084a46b4baad",
    "timestamp": 1505174400000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505260800000",
    "_rev": "2-99f74a55915a5c895006ad00231a11f5",
    "timestamp": 1505260800000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505347200000",
    "_rev": "2-a8b5cba10b08ace131fc35e00e287418",
    "timestamp": 1505347200000,
  },
]
`;

exports[`should fetch latest balances with price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": 0.072958518,
    "price": {
      "close": 3250.4,
      "high": 3923,
      "low": 3230.05,
      "open": 3855.61,
      "time": 1505347200,
      "value": 3250.4,
      "volume": 36363.92501211,
    },
    "symbol": "BTC",
    "value": 237.1443669072,
  },
]
`;

exports[`should fetch latest balances without price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": 0.072958518,
    "price": undefined,
    "symbol": "BTC",
    "value": undefined,
  },
]
`;

exports[`should have balances computed 1`] = `
[
  {
    "_id": "1217276216_3604660326_0",
    "_rev": "3-d4e726ed34cefe5f8815a6d77f7a6822",
    "balance": 0.072958518,
    "change": "0.036979259",
    "changeN": 0.036979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "1217276216_1607323056_0",
    "_rev": "2-b9b99d928b31d7d281ddfbc2250fe888",
    "balance": 0.035979259,
    "change": "0.035979259",
    "changeN": 0.035979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;

exports[`should not have balances computed 1`] = `
[
  {
    "_id": "1217276216_3604660326_0",
    "_rev": "1-decfa4dda7fb3d8f62c1aad27535c9b3",
    "change": "0.036979259",
    "changeN": 0.036979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "1217276216_1607323056_0",
    "_rev": "1-20ba2e26b49006f30d980d5480b5716b",
    "change": "0.035979259",
    "changeN": 0.035979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;
